# Titer

./: .gitignore  README.md  main.py  pyproject.toml  test-gemini.py
.github/workflows/: weekly-titer-batch.yml
docs/: github-workflow.md  titer-blog-cn.md  titer-blog.md  titer.drawio
src/titer/: __init__.py  cli.py  env.py  evaluator.py  task_runner.py
src/titer/engines/: base.py  factory.py  gemini_engine.py  openai_engine.py
tasks/: prepare_gsheet_batch_input.py  prepare_gsheet_batch_input_comma.py
